--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- SweetAlert CSS -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <!-- Custom CSS -->
-  <!-- <link rel="stylesheet" href="style.css"> -->
    <style>
         .modal-body {
   max-height: 400px;
@@ -32,18 +30,29 @@
 </head>
 <body>
   <div class="container mt-5">
-    <h1 class="text-center mb-4">Apps Pembagian Kelompok Siswa</h1>
+    <h1 class="text-center mb-4">Pembagian Kelompok Siswa</h1>
     <div class="row justify-content-center">
       <div class="col-md-6">
         <div class="card shadow">
           <div class="card-body">
-            <h5 class="card-title text-center">Masukkan Nama Siswa, pisahkan dengan koma (,)</h5>
-            <textarea id="studentNames" class="form-control mb-3" rows="5" placeholder="Contoh : Oktafia Norfadila,Syavira Riski Fagilah" required></textarea>
+            <h5 class="card-title text-center">Masukkan Nama Siswa</h5>
+  
+            <!-- Input Nama Siswa Laki-Laki -->
+            <label for="maleNames" class="form-label" style="font-weight: bold;">Nama Siswa Laki-Laki | Pisahkan dengan koma (,)</label>
+            <textarea id="maleNames" class="form-control mb-3" rows="5" placeholder="Contoh : Muhammad Fahmi Aditiya,Muhammad Nuril Afton,"></textarea>
+  
+            <!-- Input Nama Siswa Perempuan -->
+            <label for="femaleNames" class="form-label" style="font-weight: bold;">Nama Siswa Perempuan | Pisahkan dengan koma (,)</label>
+            <textarea id="femaleNames" class="form-control mb-3" rows="5" placeholder="Contoh : Oktafia Norfadila,Syavira Riski Fagilah, "></textarea>
+  
+            <!-- Input Jumlah Kelompok -->
             <div class="input-group mb-3">
               <span class="input-group-text">Jumlah Kelompok</span>
-              <input type="number" id="groupCount" class="form-control" min="1" placeholder="Contoh : 4" required>
+              <input type="number" id="groupCount" class="form-control" min="1" placeholder="Masukkan jumlah kelompok" required>
             </div>
-            <button id="divideButton" class="btn btn-primary w-100">Bagi Kelompok</button>
+  
+            <!-- Tombol Bagi Kelompok -->
+            <button id="divideButton" class="btn btn-primary btn-sm">Bagi Kelompok</button>
           </div>
         </div>
       </div>
@@ -62,8 +71,8 @@
           <div id="groupsContainerModal" class="row justify-content-center"></div>
         </div>
         <div class="modal-footer">
-          <button id="printButton" class="btn btn-success">Cetak sebagai Gambar</button>
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Tutup</button>
+          <button id="printButton" class="btn btn-success btn-sm">Cetak Gambar</button>
+          <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">Tutup</button>
         </div>
       </div>
     </div>
@@ -74,14 +83,14 @@
   <!-- html2canvas JS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <!-- Custom JS -->
-  <!-- <script src="script.js"></script> -->
-   <script>
-        document.getElementById('divideButton').addEventListener('click', function () {
-  const studentNamesInput = document.getElementById('studentNames').value.trim();
+  <script>
+    document.getElementById('divideButton').addEventListener('click', function () {
+  const maleNamesInput = document.getElementById('maleNames').value.trim();
+  const femaleNamesInput = document.getElementById('femaleNames').value.trim();
   const groupCountInput = document.getElementById('groupCount').value.trim();
 
   // Validasi input
-  if (!studentNamesInput || !groupCountInput) {
+  if ((!maleNamesInput && !femaleNamesInput) || !groupCountInput) {
     Swal.fire({
       icon: 'error',
       title: 'Oops...',
@@ -90,17 +99,9 @@
     return;
   }
 
-  const students = studentNamesInput.split(',').map(name => name.trim()).filter(name => name !== '');
+  const maleStudents = maleNamesInput.split(',').map(name => name.trim()).filter(name => name !== '');
+  const femaleStudents = femaleNamesInput.split(',').map(name => name.trim()).filter(name => name !== '');
   const groupCount = parseInt(groupCountInput);
-
-  if (students.length === 0) {
-    Swal.fire({
-      icon: 'error',
-      title: 'Oops...',
-      text: 'Nama siswa tidak valid!',
-    });
-    return;
-  }
 
   if (groupCount <= 0) {
     Swal.fire({
@@ -111,8 +112,8 @@
     return;
   }
 
-  // Bagi siswa ke dalam kelompok
-  const groups = divideStudentsIntoGroups(students, groupCount);
+  // Bagi siswa laki-laki dan perempuan ke dalam kelompok
+  const groups = divideStudentsByGender(maleStudents, femaleStudents, groupCount);
 
   // Tampilkan hasil di modal
   displayGroupsInModal(groups);
@@ -129,11 +130,19 @@
   resultModal.show();
 });
 
-function divideStudentsIntoGroups(students, groupCount) {
-  const shuffled = students.sort(() => 0.5 - Math.random());
+function divideStudentsByGender(maleStudents, femaleStudents, groupCount) {
+  const shuffledMales = maleStudents.sort(() => 0.5 - Math.random());
+  const shuffledFemales = femaleStudents.sort(() => 0.5 - Math.random());
+
   const groups = Array.from({ length: groupCount }, () => []);
 
-  shuffled.forEach((student, index) => {
+  // Distribusi siswa laki-laki
+  shuffledMales.forEach((student, index) => {
+    groups[index % groupCount].push(student);
+  });
+
+  // Distribusi siswa perempuan
+  shuffledFemales.forEach((student, index) => {
     groups[index % groupCount].push(student);
   });
 
@@ -169,19 +178,7 @@ function displayGroupsInModal(groups) {
     groupsContainerModal.appendChild(groupBox);
   });
 }
-
-// Fungsi untuk mencetak hasil sebagai gambar
-document.getElementById('printButton').addEventListener('click', function () {
-  const groupsContainerModal = document.getElementById('groupsContainerModal');
-  scale: 10;
-
-  html2canvas(groupsContainerModal).then(canvas => {
-    const link = document.createElement('a');
-    link.href = canvas.toDataURL('image/png');
-    link.download = 'pembagian_kelompok.png';
-    link.click();
-  });
-});
-   </script>
+  </script>
+  
 </body>
 </html>
